--- a/src/components/all.sass
+++ b/src/components/all.sass
@@ -31,7 +31,7 @@ $black: #2b2523
 // Helper Classes
 .full-width-image-container
   width: 100vw
-  height: 100%
+  height: 50vw
   position: relative
   left: 50%
   right: 50%
